# arcadia-extension-framework

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: error.rs  lib.rs  manifest.rs  models.rs  registry.rs  traits.rs
src/store/: client.rs  error.rs  manager.rs  mod.rs  models.rs
