[package]
name = "arcadia-extension-framework"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
url = "2.0"
md5 = "0.7"
rusqlite = "0.31"
urlencoding = "2.1"
tauri = "2.0"

[dev-dependencies]
tempfile = "3.0"
tauri = "2.0"
